--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1777,7 +1777,7 @@ body {
     -webkit-transition: all 0.4s linear;
     transition: all 0.4s linear; 
     position: relative;
-    max-width: 400px !important; 
+    max-width: 500px !important; 
     height: 25px !important; 
     background-color: rgb(207, 207, 207);
 
@@ -1815,40 +1815,26 @@ body {
 }
 
 .dexButton {
-    cursor:pointer;
+    font-weight: 500;
+    background-color: rgba(255, 255, 255, 0);
+
+    -webkit-transition: all 0.4s linear;
+    transition: all 0.4s linear; 
+
     z-index: 1;
-    -webkit-transition: all 0.2s linear;
-    transition: all 0.2s linear; 
-    background-color: #82b1ff;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.219);
+    border-width: 0px 2px 0px 0px;
+    border-right: solid #59698d;
 
-    &.act {
-        background-color: #1c71ff;
-    }
-    &.dis {
-        background-color: #cfcfcf;
-    }
 }
-
-.dexButton::after {
-    content: "";
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.24);
-    opacity: 0;
-    -webkit-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-  }
-  .dexButton:hover {
-    z-index: 2;
-    -webkit-transform: scale(1, 1);
-    transform: scale(1, 1);
-  }
-  .dexButton:hover::after {
-    display: block;
-    opacity: 1;
-  }
+.dexButton:focus {
+    background-color: #9cdce7;
+    outline: none;
+}
+.dexButtonGroup {
+    overflow: hidden;
+    border: 2px solid #59698d !important;
+    border-radius: 7px 7px 7px 7px
+}
+.dexButtonGroup button:last-child {
+    border: none !important;
+}
