--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1677,7 +1677,7 @@ body {
 .pveResult {
     background-color: #f2f3f4; 
     border-radius: 4px;
-    border-color: 1.5px solid rgba(0, 0, 0, 0.308);
+    border: 1.5px solid rgba(0, 0, 0, 0.25);
     height: fit-content;
 }
 
