--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1844,3 +1844,7 @@ body {
 .dexButtonGroup button:last-child {
     border: none !important;
 }
+
+.borderLeft{
+    border-left: 2px solid #59698d28
+}
