--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -1818,8 +1818,8 @@ body {
     font-weight: 500;
     background-color: rgba(255, 255, 255, 0);
 
-    padding-left: 3px !important;
-    padding-right: 3px !important;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
 
     -webkit-transition: all 0.4s linear;
     transition: all 0.4s linear; 
@@ -1833,6 +1833,21 @@ body {
         outline: none;
     }
 }
+
+@media (max-width: 768px) { 
+    .dexRadio {
+        padding-left: 2px !important;
+        padding-right: 2px !important;
+    }
+ }
+
+@media (max-width: 576px) { 
+    .dexRadio {
+        padding-left: 1px !important;
+        padding-right: 1px !important;
+    }
+ }
+
 .dexRadio:focus {
     outline: none;
 }
