--- a/interface/src/css/customTheme.scss
+++ b/interface/src/css/customTheme.scss
@@ -965,31 +965,19 @@ body {
     width: fit-content !important;
     padding-left: 1.5rem !important;
     padding-right: 1.5rem !important;
-    padding-top: 0.4rem !important;
-    padding-bottom: 0.4rem !important;
-    font-size: 0.65rem !important;
-}
-
-//matrix save/delete equalsized
-.saveinterface.btn.btn-primary.btn-sm {
-    width: 90% !important;
-
-    padding-left: 0.3rem !important;
-    padding-right: 0.3rem !important;
-    padding-top: 0.2rem !important;
-    padding-bottom: 0.2rem !important;
-
-    font-size: 0.6rem !important;
+    padding-top: 0.3rem !important;
+    padding-bottom: 0.3rem !important;
+    font-size: 0.75rem !important;
 }
 
 //maximizer equalsized
 .maximizerButton.btn.btn-primary.btn-sm {
-    width: 40% !important;
+    width: 45% !important;
     padding-left: 0.85rem !important;
     padding-right: 0.85rem !important;
     padding-top: 0.3rem !important;
     padding-bottom: 0.3rem !important;
-    font-size: 0.5rem !important;
+    font-size: 0.65rem !important;
 }
 
 
@@ -1008,23 +996,18 @@ body {
 
 .longButton.btn.btn-primary.btn-sm {
     max-width: fit-content !important;
-    padding-top: 0.1rem !important;
-    padding-bottom: 0.1rem !important;
+    padding-top: 0.3rem !important;
+    padding-bottom: 0.3rem !important;
     padding-left: 3rem !important;
     padding-right: 3rem !important;
 
-    font-size: 0.8rem !important;
+    font-size: 0.75rem !important;
+
+    &.fix {
+        min-width: 345px !important; 
+    }
 }
 
-.longButtonFixed.btn.btn-primary.btn-sm {
-    min-width: 345px !important;
-    padding-top: 0.1rem !important;
-    padding-bottom: 0.1rem !important;
-    padding-left: 3rem !important;
-    padding-right: 3rem !important;
-
-    font-size: 0.8rem !important;
-}
 
 //news style
 .newsTitle {
@@ -1489,17 +1472,12 @@ body {
   .constructorButton {
     background-color:rgba(244, 252, 255, 0.95);
     border-radius: 4px;
-
     padding: 0rem 0.2rem 0rem 0.2rem ;
-
     height: fit-content;
     width: fit-content;
-
     user-select: none;
-
-    font-size: 65%;
-    font-weight: 500;
-
+    font-size: 100%;
+    font-weight: bold;
     &.on{
         background-color:rgba(133, 219, 250, 0.95);
     }
@@ -1781,12 +1759,12 @@ body {
 .dexRadio:focus {
     outline: none;
 }
-.dexButtonGroup {
+.sliderButton {
     overflow: hidden;
     border: 2px solid #59698d !important;
     border-radius: 7px 7px 7px 7px
 }
-.dexButtonGroup button:last-child {
+.sliderButton button:last-child {
     border: none !important;
 }
 
